// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cities /> renders cities when they are provided 1`] = `
<div
  className="jsx-3008306360 cities"
>
  <div
    className="jsx-3008306360 sentence"
  >
    Look the weather at one of these cities
  </div>
  <ul
    className="jsx-3008306360"
  >
    <li
      className="jsx-3008306360"
    >
      <a
        className="jsx-3008306360"
        href="/china"
        onClick={[Function]}
      >
        China
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Cities /> renders empty when cities are not provided 1`] = `
<div
  className="jsx-3008306360 cities"
>
  <div
    className="jsx-3008306360 sentence"
  >
    No cities available.
  </div>
  <ul
    className="jsx-3008306360"
  />
</div>
`;
